--- a/introducao-javascript/css/index.css
+++ b/introducao-javascript/css/index.css
@@ -145,3 +145,13 @@ button[disabled=disabled], button:disabled {
 	opacity: 0;
 	transition: 0.5s;
 }
+
+#filtrar-tabela{
+	width: 200px;
+	height: 35px;
+	margin: 10px 0;
+}
+
+.invisivel{
+	display: none;
+}
